# rinha-rust-test

./: Cargo.toml  Dockerfile
.cargo/: config.toml
db/: v0001__create_people.sql
src/: main.rs  persistence.rs
