[package]
name = "rinha"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
time = "0.3.28"
tokio = { version = "1.32.0", features = ["full"] }
uuid = { version = "1.4.1", features = ["v7"] }
